# Chemistory

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_archives/: dist_auto_data.zip.part-00  dist_auto_data.zip.part-01  dist_auto_data.zip.part-02  dist_auto_data.zip.part-03  dist_auto_data.zip.part-04  dist_auto_data.zip.part-05  dist_auto_data.zip.part-06  gpr_handoff_data.zip.part-00  gpr_handoff_data.zip.part-01  gpr_handoff_data.zip.part-02  gpr_handoff_data.zip.part-03  gpr_handoff_data.zip.part-04  gpr_handoff_data.zip.part-05
docs/: ANALYSIS_OVERVIEW_JA.md  EXPERIMENTS_JA.md  FILE_KEY_AND_3D_JA.md  KERNELS_JA.md
figures/: gpr_handoff_interaction_surface_axis_tilt.html  gpr_handoff_interaction_surface_h3_environment.html  gpr_handoff_molecular_axis_uncertainty_animation.html  gpr_handoff_oof_uncertainty.html
notebooks/: 01_RF_and_GPR_handoff_Colab.ipynb  02_dist_auto_GPR_Colab.ipynb
results/: dist_auto_kernel_comparison_metrics.csv  dist_auto_kernel_comparison_predictions.csv  dist_auto_kernel_comparison_summary.csv  dist_auto_leave_one_tag_out_metrics.csv  dist_auto_leave_one_tag_out_predictions.csv  dist_auto_oof_dist_auto_full_xmat_matern12.csv  dist_auto_oof_dist_auto_full_xmat_matern32.csv  dist_auto_oof_dist_auto_full_xmat_rbf_ard_original.csv  dist_auto_oof_dist_auto_full_xmat_rbf_iso.csv  dist_auto_oof_dist_auto_full_xy_matern32_previous.csv  dist_auto_original_rbf_reference_comparison.csv  dist_auto_surface_10.csv  dist_auto_tag_centroid_distances.csv  dist_auto_test_10_metrics.csv  dist_auto_test_10_predictions.csv  (+62 more)
(+35 files in other folders)
